--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/hoteldb
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
+
+jwt.secret.key=testsecretkey
